umol-models-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@scifinder_49722-63-6.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C6NO4S
      atom_count: 12
      bond_count: 11
      property_count: 5
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C6NO4S
      atom_count: 12
      bond_count: 11
      property_count: 5
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C6NO4S
      atom_count: 12
      bond_count: 11
      extended_atoms: 0
      extended_bonds: 0
      property_count: 5
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C6NO4S
      atom_count: 12
      bond_count: 11
      extended_atoms: 0
      extended_bonds: 0
      property_count: 5
      rgroup_count: 0
      sgroup_count: 0
