umol-models-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@scifinder_53-84-9.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C21N7O14P2
      atom_count: 44
      bond_count: 48
      property_count: 9
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C21N7O14P2
      atom_count: 44
      bond_count: 48
      property_count: 9
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C21N7O14P2
      atom_count: 44
      bond_count: 48
      extended_atoms: 0
      extended_bonds: 0
      property_count: 9
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C21N7O14P2
      atom_count: 44
      bond_count: 48
      extended_atoms: 0
      extended_bonds: 0
      property_count: 9
      rgroup_count: 0
      sgroup_count: 0
